# matcha-scout

./: .env.example  .gitignore  .neon  .vercelignore  README.md  docker-compose.yml
.agents/: AGENTS.md
backend/: Dockerfile  index.py  pyproject.toml  requirements.txt
backend/app/: lambda_handler.py  main.py
backend/app/core/: config.py
backend/app/ingest/: __init__.py  export_curation_targets.py  manual_drink_curation.py  rollback_deep_research.py  sync_deep_research.py  update_cafes_from_report.py  validate_research_artifacts.py  yelp_region_ingestion.py  yelp_san_diego.py
backend/app/models/: cafe.py  drink.py  preference.py  recommendation.py  review.py  taste_profile.py
backend/app/routers/: cafes.py  drinks.py  health.py  recommendations.py  reviews.py
backend/app/seed/: create_tables.py  delete_seed_data.py  seed_data.py
backend/app/services/: aggregator.py  ai_parser.py  db.py  ranker.py  regions.py  yelp_client.py
backend/migrations/: 001_create_items.sql
backend/tests/: test_curation.py  test_deep_research_release.py  test_export_curation.py  test_mock_parser.py  test_phase12.py  test_phase18_ingestion.py  test_ranker.py  test_regions.py  test_report_sync.py  test_review_targets.py  test_yelp_client.py
docs/: aws-deployment-prep.md  deep-research-import.md  deep-research-release-file-audit.md  design-implementation-notes.md  launch-copy.md  launch-qa-checklist.md  local-kubernetes.md  local-qa-checklist.md  manual-drink-curation.md  phase-7-deployment-runbook.md  postgres-migration.md  production-drink-curation.md  project-showcase.md  (+9 more)
(+73 files in other folders)
