[project]
name = "matcha-scout-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "boto3==1.35.85",
  "pydantic==2.10.3",
  "python-dotenv==1.0.1",
  "google-genai==1.16.1",
  "mangum==0.19.0",
  "requests==2.32.3",
  "psycopg[binary]==3.2.9",
]

[tool.vercel]
entrypoint = "index:app"
